flashing changes