@@ -63,8 +63,8 @@ public class FlashPrivilegedAction implements PrivilegedAction {
 
         StringBuilder flashCommand = new StringBuilder();
         //avrdude -b 57600 -c arduino -p m168 -P usb -U flash:w:
-        flashCommand.append("cd C:\\Temp\\ & ")
-                .append("avrdude.exe ")
+
+        flashCommand.append("avrdude.exe ")
                 .append(" -C avrdude.conf ")
                 .append(" -b ").append(baudRate)
                 .append(" -P \\\\.\\").append(port)
@@ -75,7 +75,8 @@ public class FlashPrivilegedAction implements PrivilegedAction {
 
         try {
             LOGGER.info("running : " + flashCommand.toString());
-            Process flashProc = Runtime.getRuntime().exec(flashCommand.toString());
+
+            Process flashProc = Runtime.getRuntime().exec(new String[]{"cd C:\\Temp\\ ", flashCommand.toString()});
 
             try {
                 flashProc.waitFor();
